deploy/k8s/base/miniapp-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: yalom-miniapp

spec:
  type: ClusterIP

  selector:
    app: yalom-miniapp

  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
