deploy/k8s/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: yalom-bot

spec:
  parentRefs:
    - name: public-gateway
      namespace: gateway-system
      sectionName: https

  rules:
    - matches:
        - path:
            type: Exact
            value: /tg/webhook
        - path:
            type: PathPrefix
            value: /api/miniapp

      backendRefs:
        - name: yalom-bot
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /miniapp

      backendRefs:
        - name: yalom-miniapp
          port: 80
